solved z-index related issues

--- a/snapshot2.css
+++ b/snapshot2.css
@@ -7,7 +7,7 @@
     width: 100vw;
     height: 100vh;
     overflow: hidden;
-
+    z-index: 2147483647;
 }
 
 #_bottom_layer{
